Start of the new fork of Odyssey for ASA...
with most of the patches from open PRs for use in ASA applied.

--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -92,6 +92,7 @@ $white: #ffffff;
 
 $box-shadow-default: 0 2px 0 rgba(175, 175, 175, 0.12);
 
-$text-body: cv('gray', '900');
-$text-heading: cv('gray', '900');
-$text-sub: cv('gray', '500');
+// ASA: https://github.com/okta/odyssey/pull/8
+$text-body: cv('gray', '900') !default;
+$text-heading: cv('gray', '900') !default;
+$text-sub: cv('gray', '500') !default;
