--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -51,7 +51,8 @@ acronym,
 address,
 big,
 cite,
-code,
+// ASA: https://github.com/okta/odyssey/pull/7
+// code,
 del,
 dfn,
 em,
@@ -72,12 +73,13 @@ b,
 u,
 i,
 center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
+// ASA: https://github.com/okta/odyssey/pull/11
+// dl,
+// dt,
+// dd,
+// ol,
+// ul,
+// li,
 fieldset,
 form,
 label,
