--- a/src/scss/odyssey.scss
+++ b/src/scss/odyssey.scss
@@ -32,7 +32,7 @@
 @import 'components/callout';
 @import 'components/card';
 @import 'components/checkbox';
-@import 'components/dropdown';
+// @import 'components/dropdown';
 @import 'components/forms';
 @import 'components/label';
 @import 'components/meter';
