#251 add scss in button.scss file to get smaller fonts.

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -166,6 +166,7 @@
 
 .is-button-small {
   @extend %button-small;
+  font-size: 0.8rem;
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
